welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value Inverse
if(x=="I") {Inverse();}
            ^